--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -14,6 +14,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.10
+      env:
+        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
