--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - catboost=1.0.6
   - scikit-learn=1.1.1
   - flake8=4.0.1
+  - requests=2.28.1
   - pip:
     - fastapi==0.83.0
     - pydantic==1.10.2
